[package]
name = "elec-sys"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david.dunwoody@gmail.com>"]

[lib]
doctest = false

[features]
datarefs = []
xplane = []

[build-dependencies]
bindgen = "0.66.1"
build-support = { path = "../build-support" }
cc = "1.0.79"

[dev-dependencies]
acfutils-sys = { path = "../acfutils-sys" }
