[package]
name = "elec-sys"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david.dunwoody@gmail.com>"]

[lib]
doctest = false

[features]
datarefs = []
xplane = []

[build-dependencies]
bindgen = "0.66.1"
build-support = { git = "https://github.com/ddunwoody/build-support.git" }
cc = "1.0.79"

[dev-dependencies]
acfutils-sys = { git = "https://github.com/ddunwoody/acfutils-sys.git" }

[patch."https://github.com/ddunwoody/acfutils-sys.git"]
acfutils-sys = { path = "../acfutils-sys" }

[patch."https://github.com/ddunwoody/build-support"]
build-support = { path = "../build-support" }

