[package]
name = "elec-sys"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david.dunwoody@gmail.com>"]

[lib]
doctest = false

[features]
datarefs = []
vis = []

[build-dependencies]
bindgen = "0.66.1"
build-support = { git = "https://github.com/ddunwoody/build-support.git" }
cc = "1.0.79"

[dev-dependencies]
acfutils-sys = { git = "https://github.com/ddunwoody/acfutils-sys.git" }
